--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,10 @@
-# Prerequisites
-*.d
+*
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-*.c~
+#CPP
 
-# Precompiled Headers
-*.gch
-*.pch
+!*.cpp
+!*.h
+!Makefile
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# Other
-*.pdf
+#SHELL
+!*.sh
