--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,13 @@
-# Prerequisites
-*.d
+*
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+!*/
+!POO/*
 
-# Precompiled Headers
-*.gch
-*.pch
+#CPP
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+!*.cpp
+!*.h
+!Makefile
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+#SHELL
+!*.sh
