--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,32 @@
-*
+# Prerequisites
+*.d
 
-!/*
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
 
-#CPP
+# Precompiled Headers
+*.gch
+*.pch
 
-!*.cpp
-!*.h
-!Makefile
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
 
-#SHELL
-!*.sh
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
